fixed mobile overflow fingers crossed + added responsive navbar for tablet and mobile

--- a/styles/general.css
+++ b/styles/general.css
@@ -1,12 +1,13 @@
 /* ─── Base ─────────────────────────────────────────────── */
 body {
-  margin: 0;
+  min-height: 100vh;
+  margin: 10vh 0 0 0;
   padding: 0;
   font-family: "Bricolage Grotesque", sans-serif;
   color: white;
   background-image: url(../images/background_image.jpg);
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-size: cover;
   background-attachment: fixed;
 
@@ -66,7 +67,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 60vh;
   width: 50vw;
   border-radius: 4rem;
@@ -133,8 +134,8 @@ body {
   }
   .about-me-img {
     margin-top: 10vh;
-    width: 300px;
-    height: 35vh;
+    width: 250px;
+    height: 25vh;
     object-fit: cover;
     object-position: center 20%;
     border-radius: 50%;
