--- a/styles/header.css
+++ b/styles/header.css
@@ -1,33 +1,52 @@
 /* ─── Nav Bar ───────────────────────────────────────────── */
 .headerBar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
+  position: fixed;
+  top: 0;
   z-index: 400;
   width: 100%;
-  min-height: 10vh;
+  box-sizing: border-box;
   font-size: clamp(0.75rem, 1.5vw, 1rem);
-  font-weight: 800;
-  background-color: rgba(0, 0, 0, 0.15);
-  padding: 0 1rem 0 1rem;
-  flex-wrap: nowrap;
+  font-weight: 500;
+  background-color: rgba(0, 0, 0, 0.055);
+  backdrop-filter: blur(5px);
 }
 
-.headerBar a,
-.headerBar div {
-  white-space: nowrap;
+.headerBar ul {
+  width: 100%;
+  height: 10vh;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.headerBar * {
-  position: relative;
-  text-transform: uppercase;
+.headerBar a {
+  height: 100%;
+  padding: 0 1vw 1vw;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
   letter-spacing: 0.1em;
 }
 
+.headerBar li:first-child {
+  margin-right: auto;
+  font-weight: 800;
+  font-size: clamp(0.875rem, 1.5vw, 1.25rem);
+}
+
+.menu-icon {
+  display: none;
+}
+
 /* Underline animation */
+.headerBar * {
+  position: relative;
+}
+
 .headerBar *::after {
   content: "";
   display: block;
@@ -42,7 +61,6 @@
     left 0.3s ease;
 }
 
-.headerBar span:hover::after,
 .headerBar a:hover::after {
   width: 100%;
   left: 0;
@@ -71,6 +89,12 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   /* create hamburger menu with name at the top */
+  .hideonmobile {
+    display: none;
+  }
+  .menu-icon {
+    display: flex;
+  }
 }
